# RayTracingIn1Week

./: .gitignore  CMakeLists.txt  README.md
src/: hello_world.cpp  main.cpp
src/camera/: CMakeLists.txt  camera.cpp
src/camera/includes/: camera.hpp
src/color/: CMakeLists.txt  color.cpp
src/color/includes/: color.hpp
src/hittable/: CMakeLists.txt  hittable_list.cpp  sphere.cpp
src/hittable/includes/: hittable.hpp  hittable_list.hpp  sphere.hpp
src/ray/: CMakeLists.txt  ray.cpp
src/ray/includes/: ray.hpp
src/sphere/: CMakeLists.txt  sphere.cpp
src/sphere/includes/: hittable.hpp
src/utils/: CMakeLists.txt  utils.cpp
src/utils/includes/: utils.hpp
src/vec3/: CMakeLists.txt  color.cpp  vec3.cpp
src/vec3/includes/: color.hpp  vec3.hpp
